Updates for NPM publishing

--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.4",
-    "@babel/preset-env": "^7.15.4"
-  }
+    "@babel/cli": "^7.15.7",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8"
+  },
+  {
+    // ....
+    "typings": "./dist/index.d.ts"
+}
 }
