--- a/src/custom-hooks/package.json
+++ b/src/custom-hooks/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-crud-plus-state-management",
-  "version": "1.0.3",
+  "version": "1.0.6",
   "description": "React 16.8+ CRUD using axios & React Query + State Mgmt",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
     
